Bug 1350058 - Update the content context if we close the downloading window. r=mconley

MozReview-Commit-ID: A5LsapsljMY